# esp-idf-template

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README-cmake-details.md  README-cmake-from-scratch.md  README-cmake.md  README-pio.md  README-wsl2-windows.md  README.md  build.rs  cargo-generate.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPATE/: issue.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-esp-idf-master.yml  ci.yml  ci_cargo.yml  ci_cmake.yml  issue_handler.yml
cargo/: .gitdpod.Dockerfile  .gitdpod.yml  .gitignore  .gitpod.Dockerfile  Cargo.toml  build.rs  build.sh  cargo-generate.toml  diagram.json  flash.sh  pre-script.rhai  run-wokwi.sh  rust-toolchain.toml  sdkconfig.defaults  wokwi.toml
cargo/.cargo/: config.toml
cargo/.devcontainer/: Dockerfile  devcontainer.json
cargo/.github/workflows/: rust_ci.yml
cargo/docs/: README.md
cargo/scripts/: build.sh  flash.sh  run-wokwi.sh
cargo/src/: main.rs
cmake/: .gitignore  CMakeLists.txt  cargo-generate.toml  diagram.json  pre-script.rhai  sdkconfig.defaults  wokwi.toml
cmake/components/rust-{{project-name}}/: CMakeLists.txt  Cargo.toml  build.rs  placeholder.c  rust-toolchain.toml
cmake/components/rust-{{project-name}}/.cargo/: config.toml
cmake/components/rust-{{project-name}}/src/: lib.rs
cmake/main/: CMakeLists.txt  main.c
src/: main.rs
