[package]
name = "rust-esp32-std-mini"
version = "0.1.0"
authors = ["ivmarkov"]
edition = "2018"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "sys", "idf", "esp-idf", "esp32"]
description = "A \"Hello, world!\" binary crate for the ESP32[XX] and ESP-IDF."
repository = "https://github.com/ivmarkov/rust-esp32-std-mini"
license = "MIT OR Apache-2.0"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.21.1", features = ["binstart"] }

[build-dependencies]
embuild = "0.24.5"
anyhow = "1"
