[package]
name = "rust-{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
crate-type = ["staticlib"]
harness = false            # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]


{%- if hal %}
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
[features]
{%- if std %}

{%- else %}

{%- endif %}

default = ["std", "embassy", "esp-idf-svc/native"]
default = [
    "alloc",
    "embassy",
    "esp-idf-svc/native",
    "esp-idf-svc/panic_handler",
    "esp-idf-svc/alloc_handler",
]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }

[build-dependencies]

{%- endif %}
embuild = "0.32.0"

[patch.crates-io]
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
